# tauri-plugin-notifications

./: .envrc  Cargo.toml  README.md  build.rs  flake.nix  index.ts  package.json  tsconfig.json
android/: .gitignore  build.gradle.kts
android/src/test/java/: ExampleUnitTest.kt
ios/: Package.swift
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
