[package]
name = "tauri-plugin-push-notification"
version = "0.2.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.71"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-push-notification"

[dependencies]
tauri = { version = "2" }
tauri-plugin-notification = "2.0.0"
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
